--- a/heuristica.ipynb
+++ b/heuristica.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,27 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# instancias['Configuração']\n",
-    "configuracao = [[1, 0, 1], [0, 1, 1], [1, 1, 1]]\n",
+    "configuracao = [[1, 0], [1, 1], [0, 1]]\n",
     "\n",
     "# janela Disponibilidade = Disponibilidade total de tempo de uma equipe\n",
-    "janela_disponibilidade = [40, 50, 45]\n",
+    "janela_disponibilidade = [30, 40]\n",
     "\n",
     "# Janela Final = capacidade de processamento de cada maquina\n",
-    "janela_final = [20, 10, 21, 15]\n",
+    "janela_final = [27, 19, 25, 35]\n",
     "\n",
     "# Janela Inicial = tempo em que cada maquina deveria começar\n",
     "janela_inicial = [3, 3, 4, 7]\n",
     "\n",
     "# instancias['Processamento']\n",
     "# processamento = atividade x maquina\n",
-    "processamentos = [ [4, 5, 4, 1],\n",
-    "                  [4, 5, 6, 1],\n",
-    "                  [4, 7, 3, 1] ]\n",
+    "processamentos = [ [3, 3, 4, 1],\n",
+    "                   [2, 3, 1, 1],\n",
+    "                   [1, 1, 1, 2] ]\n",
     "\n",
     "# ----------------------------------------------------\n",
     "# criacao das equipes (indexadas em 1)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,13 +148,11 @@
     "\n",
     "    equipe = equipes[nome_equipe]\n",
     "    \n",
-    "    janela_inicial = equipe['janela inicial'][numero_da_maquina]\n",
-    "    janela += janela_inicial\n",
-    "    janela_na_equipe_para_maquina = equipe['janela final local'][numero_da_maquina]\n",
-    "    \n",
-    "    # DEBUG\n",
-    "    # print(f'janela equipe {nome_equipe} para maquina {numero_da_maquina}: {janela_na_equipe_para_maquina}')\n",
-    "    # print(f'tempo de janela: {janela}')\n",
+    "    janelas_iniciais = equipes[nome_equipe][janela_inicial]\n",
+    "    horario_autorizado = janelas_iniciais[numero_da_maquina]\n",
+    "\n",
+    "    # precisa esperar ?\n",
+    "    tempo = max(tempo, horario_autorizado)\n",
     "\n",
     "    if janela_na_equipe_para_maquina >= janela:\n",
     "      ativos_temporarios.append(ativo)\n",
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def distribuiParaAtivos(origem, ativos, equipes, indice_atividade) :\n",
-    "  \n",
-    "  for maquina_index in range( len(origem) ):\n",
+    "def distribuiParaAtivos(processamento, ativos, equipes, indice_atividade) :\n",
+    "\n",
+    "  for maquina_index in range( len(processamento) ):\n",
     "\n",
     "    maquina = {\n",
-    "      'janela': origem[maquina_index],\n",
+    "      'janela': processamento[maquina_index],\n",
     "      'indice da atividade': indice_atividade,\n",
     "      'maquina de origem': maquina_index\n",
     "    }\n",
@@ -223,10 +221,10 @@
     "    ativos3 = filtraAtivosPorDisponibilidade(maquina, ativos2, equipes)\n",
     "\n",
     "    # DEBUG\n",
-    "    # print(f'ATIVOS = {ativos1} ')\n",
-    "    # print(f'POR FINAL = {ativos2} ')\n",
-    "    # print(f'POR INICIAL = {ativos3} ')\n",
-    "    # print(f'POR DISPONIBILIDADE = {ativos3} ')\n",
+    "    print(f'ATIVOS = {ativos1} ')\n",
+    "    print(f'POR FINAL = {ativos2} ')\n",
+    "    print(f'POR INICIAL = {ativos3} ')\n",
+    "    print(f'POR DISPONIBILIDADE = {ativos3} ')\n",
     "    \n",
     "    # resgato a posicao em cima do ultimo filtro\n",
     "    pos = randint(0, len(ativos3)-1 )\n",
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,47 +317,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ATIVOS = [0] \n",
+      "POR FINAL = [0] \n",
+      "POR INICIAL = [0] \n",
+      "POR DISPONIBILIDADE = [0] \n",
+      "ATIVOS = [0] \n",
+      "POR FINAL = [0] \n",
+      "POR INICIAL = [0] \n",
+      "POR DISPONIBILIDADE = [0] \n",
+      "ATIVOS = [0] \n",
+      "POR FINAL = [0] \n",
+      "POR INICIAL = [0] \n",
+      "POR DISPONIBILIDADE = [0] \n",
+      "ATIVOS = [0] \n",
+      "POR FINAL = [0] \n",
+      "POR INICIAL = [0] \n",
+      "POR DISPONIBILIDADE = [0] \n",
+      "ATIVOS = [0, 1] \n",
+      "POR FINAL = [0, 1] \n",
+      "POR INICIAL = [0, 1] \n",
+      "POR DISPONIBILIDADE = [0, 1] \n",
+      "ATIVOS = [0, 1] \n",
+      "POR FINAL = [0, 1] \n",
+      "POR INICIAL = [0, 1] \n",
+      "POR DISPONIBILIDADE = [0, 1] \n",
+      "ATIVOS = [0, 1] \n",
+      "POR FINAL = [0, 1] \n",
+      "POR INICIAL = [0, 1] \n",
+      "POR DISPONIBILIDADE = [0, 1] \n",
+      "ATIVOS = [0, 1] \n",
+      "POR FINAL = [0, 1] \n",
+      "POR INICIAL = [0, 1] \n",
+      "POR DISPONIBILIDADE = [0, 1] \n",
+      "ATIVOS = [1] \n",
+      "POR FINAL = [1] \n",
+      "POR INICIAL = [1] \n",
+      "POR DISPONIBILIDADE = [1] \n",
+      "ATIVOS = [1] \n",
+      "POR FINAL = [1] \n",
+      "POR INICIAL = [1] \n",
+      "POR DISPONIBILIDADE = [1] \n",
+      "ATIVOS = [1] \n",
+      "POR FINAL = [1] \n",
+      "POR INICIAL = [1] \n",
+      "POR DISPONIBILIDADE = [1] \n",
+      "ATIVOS = [1] \n",
+      "POR FINAL = [1] \n",
+      "POR INICIAL = [1] \n",
+      "POR DISPONIBILIDADE = [1] \n",
       "# eq1\n",
-      "disponibilidade total : 40 \n",
-      "disponibilidade resultante : 28 \n",
-      "tempo gasto da equipe total : 12 \n",
-      "janela final local final : [16, 5, 18, 15] \n",
-      "janela total : [20, 10, 21, 15] \n",
-      "consumo da janela inicial : [0, 0, 0, 7] \n",
-      "{'janela': 4, 'indice da atividade': 0, 'maquina de origem': 0}\n",
-      "{'janela': 5, 'indice da atividade': 0, 'maquina de origem': 1}\n",
-      "{'janela': 3, 'indice da atividade': 2, 'maquina de origem': 2}\n",
-      "# eq2\n",
-      "disponibilidade total : 50 \n",
-      "disponibilidade resultante : 36 \n",
+      "disponibilidade total : 30 \n",
+      "disponibilidade resultante : 16 \n",
       "tempo gasto da equipe total : 14 \n",
-      "janela final local final : [12, 5, 21, 14] \n",
-      "janela total : [20, 10, 21, 15] \n",
-      "consumo da janela inicial : [0, 0, 4, 0] \n",
-      "{'janela': 4, 'indice da atividade': 1, 'maquina de origem': 0}\n",
-      "{'janela': 5, 'indice da atividade': 1, 'maquina de origem': 1}\n",
-      "{'janela': 4, 'indice da atividade': 2, 'maquina de origem': 0}\n",
-      "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 3}\n",
-      "# eq3\n",
-      "disponibilidade total : 45 \n",
-      "disponibilidade resultante : 26 \n",
-      "tempo gasto da equipe total : 19 \n",
-      "janela final local final : [20, 3, 11, 13] \n",
-      "janela total : [20, 10, 21, 15] \n",
-      "consumo da janela inicial : [3, 0, 0, 0] \n",
+      "janela final local final : [22, 16, 20, 34] \n",
+      "janela total : [27, 19, 25, 35] \n",
+      "consumo da janela inicial : [0, 0, 0, 0] \n",
+      "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 0}\n",
+      "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 1}\n",
       "{'janela': 4, 'indice da atividade': 0, 'maquina de origem': 2}\n",
       "{'janela': 1, 'indice da atividade': 0, 'maquina de origem': 3}\n",
-      "{'janela': 6, 'indice da atividade': 1, 'maquina de origem': 2}\n",
+      "{'janela': 2, 'indice da atividade': 1, 'maquina de origem': 0}\n",
+      "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 2}\n",
+      "# eq2\n",
+      "disponibilidade total : 40 \n",
+      "disponibilidade resultante : 31 \n",
+      "tempo gasto da equipe total : 9 \n",
+      "janela final local final : [26, 15, 24, 32] \n",
+      "janela total : [27, 19, 25, 35] \n",
+      "consumo da janela inicial : [0, 0, 0, 0] \n",
+      "{'janela': 3, 'indice da atividade': 1, 'maquina de origem': 1}\n",
       "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 3}\n",
-      "{'janela': 7, 'indice da atividade': 2, 'maquina de origem': 1}\n",
-      "MAIOR TEMPO GASTO EM UMA EQUIPE: 19\n"
+      "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 0}\n",
+      "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 1}\n",
+      "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 2}\n",
+      "{'janela': 2, 'indice da atividade': 2, 'maquina de origem': 3}\n",
+      "MAIOR TEMPO GASTO EM UMA EQUIPE: 14\n"
      ]
     }
    ],
