--- a/heuristica.ipynb
+++ b/heuristica.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,7 @@
     "  equipes[nome_equipe]['janela inicial'] = [ ]\n",
     "  equipes[nome_equipe]['disponibilidade'] = janela_disponibilidade[numero]\n",
     "  equipes[nome_equipe]['disponibilidade total'] = janela_disponibilidade[numero]\n",
+    "  equipes[nome_equipe]['tempo'] = 0\n",
     "  \n",
     "  for i in range(len(janela_final)):\n",
     "    valor = janela_final[i]\n",
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,37 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filtraAtivosPorJanelaInicial(maquina, ativos, equipes):\n",
-    "\n",
-    "  numero_da_maquina = maquina['maquina de origem']\n",
-    "  janela = maquina['janela'] \n",
-    "  ativos_temporarios = [ ]\n",
-    "\n",
-    "  for i in range( len(ativos) ):\n",
-    "    ativo = ativos[i]\n",
-    "    nome_equipe = 'eq' + str(ativo + 1)\n",
-    "\n",
-    "    equipe = equipes[nome_equipe]\n",
-    "    \n",
-    "    janelas_iniciais = equipes[nome_equipe][janela_inicial]\n",
-    "    horario_autorizado = janelas_iniciais[numero_da_maquina]\n",
-    "\n",
-    "    # precisa esperar ?\n",
-    "    tempo = max(tempo, horario_autorizado)\n",
-    "\n",
-    "    if janela_na_equipe_para_maquina >= janela:\n",
-    "      ativos_temporarios.append(ativo)\n",
-    "\n",
-    "  return ativos_temporarios"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processaJanelaInicial(maquina, equipe):\n",
+    "\n",
+    "  numero_da_maquina = maquina['maquina de origem']\n",
+    "  janela = maquina['janela'] \n",
+    "    \n",
+    "  horario_autorizado = equipe['janela inicial'][numero_da_maquina]\n",
+    "\n",
+    "  # precisa esperar ?\n",
+    "  tempo = max(equipe['tempo'], horario_autorizado) + janela\n",
+    "  \n",
+    "  equipe['tempo'] = tempo  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,28 +204,25 @@
     "    # ativos 1 = filtrados pela janela final\n",
     "    ativos1 = filtraAtivosPorJanelaFinal(maquina, ativos, equipes)\n",
     "\n",
-    "    # ativos 2 = filtados pela janela inicial\n",
-    "    ativos2 = filtraAtivosPorJanelaInicial(maquina, ativos1, equipes)\n",
-    "\n",
-    "    # ativos 3 = filtrados pela disponibilidade da equipe\n",
-    "    ativos3 = filtraAtivosPorDisponibilidade(maquina, ativos2, equipes)\n",
-    "\n",
+    "    # ativos 2 = filtrados pela disponibilidade da equipe\n",
+    "    ativos2 = filtraAtivosPorDisponibilidade(maquina, ativos1, equipes)\n",
+    "   \n",
     "    # DEBUG\n",
-    "    print(f'ATIVOS = {ativos1} ')\n",
-    "    print(f'POR FINAL = {ativos2} ')\n",
-    "    print(f'POR INICIAL = {ativos3} ')\n",
-    "    print(f'POR DISPONIBILIDADE = {ativos3} ')\n",
+    "    # print(f'ATIVOS = {ativos1} ')\n",
+    "    # print(f'POR FINAL = {ativos2} ')\n",
     "    \n",
     "    # resgato a posicao em cima do ultimo filtro\n",
-    "    pos = randint(0, len(ativos3)-1 )\n",
-    "\n",
+    "    pos = randint(0, len(ativos2)-1 )\n",
+    "   \n",
     "    ## monto o nome da equipe em funcao dos filtrados\n",
-    "    nome_equipe = 'eq' + str(ativos3[pos] + 1)\n",
-    "\n",
+    "    nome_equipe = 'eq' + str(ativos2[pos] + 1)\n",
     "    equipe = equipes[nome_equipe]\n",
+    "   \n",
+    "    #processando janela inicial\n",
+    "    # ainda não valida se o tempo total é menor que a janela final\n",
+    "    ativos2 = processaJanelaInicial(maquina, equipe)\n",
     "\n",
     "    equipe['janela final local'][maquina_index] -= maquina['janela']\n",
-    "    equipe['janela inicial'][maquina_index] = 0\n",
     "    equipe['disponibilidade'] -= maquina['janela']\n",
     "    \n",
     "    # DEBUG\n",
@@ -246,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +265,7 @@
     "    nome_equipe = 'eq' + str(i + 1)\n",
     "    equipe = equipes[nome_equipe]\n",
     "\n",
-    "    tempo_gasto = equipe[\"disponibilidade total\"] - equipe[\"disponibilidade\"]\n",
+    "    tempo_gasto = equipe['tempo']\n",
     "\n",
     "    if tempo_gasto > maior_tempo:\n",
     "      maior_tempo = tempo_gasto\n",
@@ -295,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -326,79 +313,55 @@
      "text": [
       "ATIVOS = [0] \n",
       "POR FINAL = [0] \n",
-      "POR INICIAL = [0] \n",
-      "POR DISPONIBILIDADE = [0] \n",
       "ATIVOS = [0] \n",
       "POR FINAL = [0] \n",
-      "POR INICIAL = [0] \n",
-      "POR DISPONIBILIDADE = [0] \n",
       "ATIVOS = [0] \n",
       "POR FINAL = [0] \n",
-      "POR INICIAL = [0] \n",
-      "POR DISPONIBILIDADE = [0] \n",
       "ATIVOS = [0] \n",
       "POR FINAL = [0] \n",
-      "POR INICIAL = [0] \n",
-      "POR DISPONIBILIDADE = [0] \n",
       "ATIVOS = [0, 1] \n",
       "POR FINAL = [0, 1] \n",
-      "POR INICIAL = [0, 1] \n",
-      "POR DISPONIBILIDADE = [0, 1] \n",
       "ATIVOS = [0, 1] \n",
       "POR FINAL = [0, 1] \n",
-      "POR INICIAL = [0, 1] \n",
-      "POR DISPONIBILIDADE = [0, 1] \n",
       "ATIVOS = [0, 1] \n",
       "POR FINAL = [0, 1] \n",
-      "POR INICIAL = [0, 1] \n",
-      "POR DISPONIBILIDADE = [0, 1] \n",
       "ATIVOS = [0, 1] \n",
       "POR FINAL = [0, 1] \n",
-      "POR INICIAL = [0, 1] \n",
-      "POR DISPONIBILIDADE = [0, 1] \n",
       "ATIVOS = [1] \n",
       "POR FINAL = [1] \n",
-      "POR INICIAL = [1] \n",
-      "POR DISPONIBILIDADE = [1] \n",
       "ATIVOS = [1] \n",
       "POR FINAL = [1] \n",
-      "POR INICIAL = [1] \n",
-      "POR DISPONIBILIDADE = [1] \n",
       "ATIVOS = [1] \n",
       "POR FINAL = [1] \n",
-      "POR INICIAL = [1] \n",
-      "POR DISPONIBILIDADE = [1] \n",
       "ATIVOS = [1] \n",
       "POR FINAL = [1] \n",
-      "POR INICIAL = [1] \n",
-      "POR DISPONIBILIDADE = [1] \n",
       "# eq1\n",
       "disponibilidade total : 30 \n",
-      "disponibilidade resultante : 16 \n",
-      "tempo gasto da equipe total : 14 \n",
-      "janela final local final : [22, 16, 20, 34] \n",
+      "disponibilidade resultante : 19 \n",
+      "tempo gasto da equipe total : 14\n",
+      "janela final local final : [24, 16, 21, 34] \n",
       "janela total : [27, 19, 25, 35] \n",
-      "consumo da janela inicial : [0, 0, 0, 0] \n",
+      "consumo da janela inicial : [3, 3, 4, 7] \n",
       "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 0}\n",
       "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 1}\n",
       "{'janela': 4, 'indice da atividade': 0, 'maquina de origem': 2}\n",
       "{'janela': 1, 'indice da atividade': 0, 'maquina de origem': 3}\n",
-      "{'janela': 2, 'indice da atividade': 1, 'maquina de origem': 0}\n",
-      "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 2}\n",
       "# eq2\n",
       "disponibilidade total : 40 \n",
-      "disponibilidade resultante : 31 \n",
-      "tempo gasto da equipe total : 9 \n",
-      "janela final local final : [26, 15, 24, 32] \n",
+      "disponibilidade resultante : 28 \n",
+      "tempo gasto da equipe total : 15\n",
+      "janela final local final : [24, 15, 23, 32] \n",
       "janela total : [27, 19, 25, 35] \n",
-      "consumo da janela inicial : [0, 0, 0, 0] \n",
+      "consumo da janela inicial : [3, 3, 4, 7] \n",
+      "{'janela': 2, 'indice da atividade': 1, 'maquina de origem': 0}\n",
       "{'janela': 3, 'indice da atividade': 1, 'maquina de origem': 1}\n",
+      "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 2}\n",
       "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 3}\n",
       "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 0}\n",
       "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 1}\n",
       "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 2}\n",
       "{'janela': 2, 'indice da atividade': 2, 'maquina de origem': 3}\n",
-      "MAIOR TEMPO GASTO EM UMA EQUIPE: 14\n"
+      "MAIOR TEMPO GASTO EM UMA EQUIPE: 15\n"
      ]
     }
    ],
@@ -409,7 +372,7 @@
     "  print(f'# {key}')\n",
     "  print(f'disponibilidade total : {equipes[key][\"disponibilidade total\"]} ')\n",
     "  print(f'disponibilidade resultante : {equipes[key][\"disponibilidade\"]} ')\n",
-    "  print(f'tempo gasto da equipe total : {equipes[key][\"disponibilidade total\"] - equipes[key][\"disponibilidade\"]} ')\n",
+    "  print(f'tempo gasto da equipe total : {equipes[key][\"tempo\"]}')\n",
     "  print(f'janela final local final : {equipes[key][\"janela final local\"]} ')\n",
     "  print(f'janela total : {equipes[key][\"janela total\"]} ')\n",
     "  print(f'consumo da janela inicial : {equipes[key][\"janela inicial\"]} ')\n",
