Chaging random find method to sort find method

--- a/heuristica.ipynb
+++ b/heuristica.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inicializando Variáveis do projeto\n",
+    "### Inicializando Variáveis do projeto\n",
     "\n",
     "1. declarar os valores iniciais\n",
     "2. inicializar as variáveis compostas"
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instancias['Configuração']\n",
+    "# instancias['ConfiguraÃƒÂ§ÃƒÂ£o']\n",
     "configuracao = [[1, 0], [1, 1], [0, 1]]\n",
     "\n",
     "# janela Disponibilidade = Disponibilidade total de tempo de uma equipe\n",
@@ -41,7 +41,7 @@
     "# Janela Final = capacidade de processamento de cada maquina\n",
     "janela_final = [27, 19, 25, 35]\n",
     "\n",
-    "# Janela Inicial = tempo em que cada maquina deveria começar\n",
+    "# Janela Inicial = tempo em que cada maquina deveria comeÃƒÂ§ar\n",
     "janela_inicial = [3, 3, 4, 7]\n",
     "\n",
     "# instancias['Processamento']\n",
@@ -80,14 +80,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Definindo os filtros\n",
+    "### Definindo os filtros\n",
     "\n",
     "Filtros serão funções para buscarmos equipes que podem receber alguma determina máquina baseado em alguns critétios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert filtraAtivos([0, 1, 1]) == [1, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,12 +172,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Funções de distribuição entre equipes e ativos"
+    "### Ordenando os ativos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordenaPorJanelaFinal_desc(maquina, ativos, equipes) :\n",
+    "\n",
+    "  numero_da_maquina = maquina['maquina de origem']\n",
+    "  ativos_com_janela_final = dict()\n",
+    "\n",
+    "  for i in range( len(ativos) ):\n",
+    "    ativo = ativos[i]\n",
+    "    nome_equipe = 'eq' + str(ativo + 1)\n",
+    "    janela_final = equipes[nome_equipe]['janela final local']\n",
+    "    ativos_com_janela_final[i] = janela_final[numero_da_maquina]\n",
+    "\n",
+    "  ordenados = sorted(ativos_com_janela_final.items(), key = lambda x:x[1], reverse = True)\n",
+    "  ordenados = list(dict(ordenados).keys())\n",
+    "\n",
+    "  # DEBUG\n",
+    "  # print(f'dicionario temporario = {ativos_com_janela_final}')\n",
+    "  # print(f'ordenados = {ordenados}')\n",
+    "\n",
+    "  return ordenados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordenaPorJanelaInicial_asc(maquina, ativos, equipes) : \n",
+    "  \n",
+    "  numero_da_maquina = maquina['maquina de origem']\n",
+    "  ativos_com_janela_inicial = dict()\n",
+    "\n",
+    "  for i in range( len(ativos) ):\n",
+    "    ativo = ativos[i]\n",
+    "    nome_equipe = 'eq' + str(ativo + 1)\n",
+    "    janela_inicial = equipes[nome_equipe]['janela inicial']\n",
+    "    ativos_com_janela_inicial[i] = janela_inicial[numero_da_maquina]\n",
+    "\n",
+    "    ordenados = sorted(ativos_com_janela_inicial.items(), key = lambda x:x[1])\n",
+    "    ordenados = list(dict(ordenados).keys())\n",
+    "\n",
+    "    # DEBUG\n",
+    "    # print(f'dicionario temporario = {ativos_com_janela_inicial}')\n",
+    "    # print(f'ordenados = {ordenados}')\n",
+    "\n",
+    "    return ordenados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções de distribuição entre equipes e ativos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 596,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,18 +276,27 @@
     "\n",
     "    # ativos 2 = filtrados pela disponibilidade da equipe\n",
     "    ativos2 = filtraAtivosPorDisponibilidade(maquina, ativos1, equipes)\n",
-    "   \n",
-    "    # DEBUG\n",
-    "    # print(f'ATIVOS = {ativos1} ')\n",
-    "    # print(f'POR FINAL = {ativos2} ')\n",
+    "\n",
+    "    # ordenados 1 = filtrando por janela final de modo decrescente\n",
+    "    ordenados1 = ordenaPorJanelaFinal_desc(maquina, ativos2, equipes)\n",
+    "\n",
+    "    # tenho certeza que o tamanho será necessariamente maior que zero\n",
+    "    assert len(ordenados1) > 0, 'houve uma falha em ordernar pela janela final'\n",
+    "\n",
+    "    # ordenados 2 = filtrando por janela inicial de modo crescente\n",
+    "    ordenados2 = ordenaPorJanelaInicial_asc(maquina, ordenados1, equipes)\n",
     "    \n",
-    "    # resgato a posicao em cima do ultimo filtro\n",
-    "    pos = randint(0, len(ativos2)-1 )\n",
-    "   \n",
+    "    # tenho certeza que o tamanho será necessariamente maior que zero\n",
+    "    assert len(ordenados2) > 0, 'houve uma falha em ordernar pela janela inicial'\n",
+    "\n",
+    "    # acesso a posição\n",
     "    ## monto o nome da equipe em funcao dos filtrados\n",
-    "    nome_equipe = 'eq' + str(ativos2[pos] + 1)\n",
-    "    equipe = equipes[nome_equipe]\n",
+    "    numero_equipe_escolhida = ordenados2[0]\n",
+    "    nome_equipe = 'eq' + str(numero_equipe_escolhida + 1)\n",
     "   \n",
+    "    # acesso a equipe que receberá a maquina\n",
+    "    equipe = equipes[nome_equipe]\n",
+    "    \n",
     "    #processando janela inicial\n",
     "    # ainda não valida se o tempo total é menor que a janela final\n",
     "    ativos2 = processaJanelaInicial(maquina, equipe)\n",
@@ -233,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 597,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,55 +383,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ATIVOS = [0] \n",
-      "POR FINAL = [0] \n",
-      "ATIVOS = [0] \n",
-      "POR FINAL = [0] \n",
-      "ATIVOS = [0] \n",
-      "POR FINAL = [0] \n",
-      "ATIVOS = [0] \n",
-      "POR FINAL = [0] \n",
-      "ATIVOS = [0, 1] \n",
-      "POR FINAL = [0, 1] \n",
-      "ATIVOS = [0, 1] \n",
-      "POR FINAL = [0, 1] \n",
-      "ATIVOS = [0, 1] \n",
-      "POR FINAL = [0, 1] \n",
-      "ATIVOS = [0, 1] \n",
-      "POR FINAL = [0, 1] \n",
-      "ATIVOS = [1] \n",
-      "POR FINAL = [1] \n",
-      "ATIVOS = [1] \n",
-      "POR FINAL = [1] \n",
-      "ATIVOS = [1] \n",
-      "POR FINAL = [1] \n",
-      "ATIVOS = [1] \n",
-      "POR FINAL = [1] \n",
+      "-------------------------------------------------\n",
       "# eq1\n",
       "disponibilidade total : 30 \n",
-      "disponibilidade resultante : 19 \n",
-      "tempo gasto da equipe total : 14\n",
-      "janela final local final : [24, 16, 21, 34] \n",
+      "disponibilidade resultante : 7 \n",
+      "tempo gasto da equipe total : 26\n",
+      "janela final local : [21, 12, 19, 31] \n",
       "janela total : [27, 19, 25, 35] \n",
-      "consumo da janela inicial : [3, 3, 4, 7] \n",
+      "janela inicial : [3, 3, 4, 7] \n",
+      "-------------------------------------------------\n",
       "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 0}\n",
       "{'janela': 3, 'indice da atividade': 0, 'maquina de origem': 1}\n",
       "{'janela': 4, 'indice da atividade': 0, 'maquina de origem': 2}\n",
       "{'janela': 1, 'indice da atividade': 0, 'maquina de origem': 3}\n",
-      "# eq2\n",
-      "disponibilidade total : 40 \n",
-      "disponibilidade resultante : 28 \n",
-      "tempo gasto da equipe total : 15\n",
-      "janela final local final : [24, 15, 23, 32] \n",
-      "janela total : [27, 19, 25, 35] \n",
-      "consumo da janela inicial : [3, 3, 4, 7] \n",
       "{'janela': 2, 'indice da atividade': 1, 'maquina de origem': 0}\n",
       "{'janela': 3, 'indice da atividade': 1, 'maquina de origem': 1}\n",
       "{'janela': 1, 'indice da atividade': 1, 'maquina de origem': 2}\n",
@@ -361,21 +411,32 @@
       "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 1}\n",
       "{'janela': 1, 'indice da atividade': 2, 'maquina de origem': 2}\n",
       "{'janela': 2, 'indice da atividade': 2, 'maquina de origem': 3}\n",
-      "MAIOR TEMPO GASTO EM UMA EQUIPE: 15\n"
+      "# eq2\n",
+      "disponibilidade total : 40 \n",
+      "disponibilidade resultante : 40 \n",
+      "tempo gasto da equipe total : 0\n",
+      "janela final local : [27, 19, 25, 35] \n",
+      "janela total : [27, 19, 25, 35] \n",
+      "janela inicial : [3, 3, 4, 7] \n",
+      "-------------------------------------------------\n",
+      "MAIOR TEMPO GASTO EM UMA EQUIPE: 26\n"
      ]
     }
    ],
    "source": [
     "divideMatriz(configuracao, processamentos, equipes)\n",
     "\n",
+    "print('-------------------------------------------------')\n",
+    "\n",
     "for key in equipes.keys():\n",
     "  print(f'# {key}')\n",
     "  print(f'disponibilidade total : {equipes[key][\"disponibilidade total\"]} ')\n",
     "  print(f'disponibilidade resultante : {equipes[key][\"disponibilidade\"]} ')\n",
     "  print(f'tempo gasto da equipe total : {equipes[key][\"tempo\"]}')\n",
-    "  print(f'janela final local final : {equipes[key][\"janela final local\"]} ')\n",
+    "  print(f'janela final local : {equipes[key][\"janela final local\"]} ')\n",
     "  print(f'janela total : {equipes[key][\"janela total\"]} ')\n",
-    "  print(f'consumo da janela inicial : {equipes[key][\"janela inicial\"]} ')\n",
+    "  print(f'janela inicial : {equipes[key][\"janela inicial\"]} ')\n",
+    "  print('-------------------------------------------------')\n",
     "\n",
     "  for maquina in equipes[key]['maquinas']:\n",
     "    print(f'{maquina}')\n",
